--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.5.0",
+        "mini-toastr": "^0.8.1",
+        "vue-router": "^3.1.6",
+        "vuex": "^3.1.2",
+        "vuex-persistedstate": "^2.7.1"
     }
 }
